# sparse-merkle-tree

./: .gitignore  CHANGE_LOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  test.yml
smt/: __init__.py  proof.py  store.py  tree.py  utils.py
sparsemerkletree/: __init__.py  proof.py  store.py  tree.py  utils.py
tests/: __init__.py  test_proof.py  test_tree.py
