[project]
name = "sparse-merkle-tree"
description = "A Sparse Merkle Tree for a key/value map"
authors = [{ name = "Dave Bryson" }]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
]
keywords = ['merkletree']
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
style = ['black']
test = ['pytest']
build = ['twine', 'build']

[project.urls]
Source = 'https://github.com/davebryson/sparse-merkle-tree'

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]

[tool.black]
line-length = 80

[tool.pytest.ini_options]
testpaths = ['tests']