[metadata]
name = sparse-merkle-tree
version = attr: smt.__version__
description = A Sparse Merkle Tree for a key/value map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davebryson/sparse-merkle-tree
author = Dave Bryson
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
keywords = merkletree
project_urls =
    Source = https://github.com/davebryson/sparse-merkle-tree

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9

[options.extras_require]
dev =
    pytest
    twine
    black
    build

[tool:pytest]
testpaths = tests

